site works on server now

--- a/themes/detox/layouts/partials/header.html
+++ b/themes/detox/layouts/partials/header.html
@@ -4,8 +4,8 @@
         <p class="blog-description">{{ .Site.Params.description }}</p>
         <div align="center">
             <nav>
-                <a href="{{ .Site.BaseURL }}">Blog</a>
-                <a href="{{ .Site.BaseURL }}/CV.pdf">CV</a>
+                <a href="http://{{ .Site.BaseURL }}">Blog</a>
+                <a href="http://{{ .Site.BaseURL }}/CV.pdf">CV</a>
                 <a href="mailto:hunter@werlla.com">Mail</a>
                 <a href="https://github.com/hunterwerlla">Github</a>
             </nav>
