--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,9 +1,9 @@
+{{ partial "head.html" . }}
 {{ partial "header.html" . }}
-{{ partial "subheader.html" . }}
 
 <section id="main">
-  <div>
-   <h1 id="title">{{ .Title }}</h1>
+  <div id="input">
+   <h1>{{ .Title }}</h1>
   </div>
 </section>
 
