--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+
 h1 {
     font-size: 2.2rem;
     margin-bottom: 0.495em;
-    font-family: "Source Code Pro", "Arial", serif;
+    font-family: "Lato", "Arial", serif;
     font-weight: 700;
     line-height: 1;
     margin-top: 0;
@@ -9,29 +13,21 @@ h1 {
 }
 
 a {
-    color: #333;
+    color: #35342F;
     text-decoration: none;
+    text-rendering: geometricPrecision;
     line-height: inherit;
     padding-left: 0.2rem;
     padding-right: 0.15rem;
     outline: 0;
-    -webkit-transition: color .1s ease-out;
-    -webkit-transition-property: color;
-    -webkit-transition-duration: .1s;
-    -webkit-transition-timing-function: ease-out;
-    -webkit-transition-delay: initial;
-    -moz-transition: color .1s ease-out;
-    -o-transition: color .1s ease-out;
-    -ms-transition: color .1s ease-out;
-    transition: color .1s ease-out;
     transition-property: color;
-    transition-duration: .1s;
+    transition-duration: 0.15s;
     transition-timing-function: ease-out;
-    transition-delay: initial;
+    transition-delay: 0;
 }
 
 a:hover {
-    color: #b3b3b3;
+    color: #F1F2F0;
 }
 
 p a,
@@ -42,26 +38,19 @@ p a:visited {
 html {
     margin: 0;
     padding-top: 1rem;
-    font-family: "Helvetica Neue", Helvetica, "Source Code Pro", sans-serif;
+    font-family: "Lato", "Helvetica Neue", Helvetica, sans-serif;
     font-size: 2.5rem;
     line-height: 1.65;
     font-weight: normal;
     overflow-y: scroll;
     min-height: 100%;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 body {
-    background-color: #fff;
-    color: #333;
-    min-height: 100%;
+    background-color: #E1E0DD;
+    background-image: url("../image/background.png");
     width: 100%;
-    *zoom: 1;
-    -webkit-font-smoothing: antialiased;
-    -webkit-hyphens: auto;
-    -moz-hyphens: auto;
-    -ms-hyphens: auto;
-    -o-hyphens: auto;
-    hyphens: auto;
     word-wrap: break-word;
+    margin: 0; 
+    padding: 0
 }
