--- a/css/root.css
+++ b/css/root.css
@@ -5,11 +5,12 @@
 }
 
 a {
-    font-size: 1.7em;
-    padding-right: 0.6em;
+    font-size: clamp(0.75rem, 4vw, 2.6rem);
+    padding-right: 1vw;
 }
 
 h1 {
-    font-size: 4em;
+    font-size: clamp(1.70rem, 8.75vw, 5rem);
     margin-bottom: 4%;
+    margin-left: -0.5vw;
 }
